Add a way to authenticate REST API with tokens
The JobServ API doesn't know about the Gavel CI DB so we have to
insert some nginx proxy logic to intercept an API Token and convert
it into a real token if necessary.

Signed-off-by: Andy Doan <andy@foundries.io>

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,23 @@ server {
 	gzip_types       application/json;
 
 	location / {
+		# We need to turn an API token only known in the gavel-ci DB
+		# into a JWT signed bearer the jobserv API can validate.
+		auth_request     /internal-token-auth;
+		auth_request_set $auth $upstream_http_authorization;
+		proxy_set_header Authorization $auth;
+		proxy_set_header Host $host;
+		proxy_set_header X-Forwarded-Proto $scheme;
+
 		proxy_pass http://api:8000/;
+	}
+
+	location = /internal-token-auth {
+		internal;
+		proxy_pass              http://ui:8000/settings/token/auth/;
+		proxy_pass_request_body off;
+		proxy_set_header        Content-Length "";
+		proxy_set_header        X-Original-URI $request_uri;
 	}
 }
 
