--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
     # We are technically dependent on mysql. However, we are dependent on the
     # jobserv to actually do db migrations. Therefore, we wait on the jobserv
     # instead of mysql.
-    command: "/srv/jobserv/wait-for -t 30 api:8000 -- flask monitor_workers"
+    command: "/srv/jobserv/wait-for -t 30 api:8000 -- flask monitor-workers"
     environment:
       SQLALCHEMY_DATABASE_URI_FMT: "mysql+pymysql://{db_user}:{db_pass}@jobserv-db/jobserv"
       DB_USER: jobserv
