--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask-Dance[sqla]==1.0.0
 Flask-Login==0.4.1
 Flask-Migrate==2.3.1
 Flask-SQLAlchemy==2.3.2
+SQLAlchemy==1.3.19
 PyMySQL==0.9.2
 bcrypt==3.1.4
 flask==1.0.2
