--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,17 @@ Flask-Dance[sqla]==1.0.0
 Flask-Login==0.4.1
 Flask-Migrate==2.3.1
 Flask-SQLAlchemy==2.3.2
+Flask==1.1.2
+Jinja2==3.0.3
 SQLAlchemy==1.3.19
 PyMySQL==0.9.2
 bcrypt==3.1.4
-flask==1.0.2
 gunicorn==19.9.0
 pyjwt==2.4.0
 requests==2.20.1
 blinker==1.4
+# https://itsdangerous.palletsprojects.com/en/2.1.x/changes/#version-2-1-0
+itsdangerous==2.0.1
+# https://markupsafe.palletsprojects.com/en/2.1.x/changes/#version-2-1-0
+MarkupSafe==2.0.1
+Werkzeug==0.16.1
