--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 Flask==2.3.3
+json-logging==1.3.0
 Jinja2==3.1.6
 SQLAlchemy==2.0.36
 PyMySQL==1.1.1
